crates/analyzer/tests/snapshots/errors__invalid_string_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No field `does_not_exist` exists on type String<0>
  ┌─ compile_errors/invalid_string_field.fe:3:12
  │
3 │         "".does_not_exist
  │            ^^^^^^^^^^^^^^ unknown field


